finish control panel related stuff, add confirmed appointment endpoint with tests and docs
