# api_documintation.json
@@ -305,6 +305,50 @@
         }
       }
     },
+    "/appointments/addConfirmedAppointment": {
+      "post": {
+        "tags": ["appointments"],
+        "summary": "add new appointment: ",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/newConfirmedAppointment"
+            }
+          },
+          {
+            "in": "header",
+            "name": "Authorization",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "201 (created)",
+            "schema": {
+              "$ref": "#/definitions/newConfirmedAppointmentResponse"
+            }
+          },
+          "400": {
+            "description": "400 (inputs or missing or incorrect)",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          },
+          "401": {
+            "description": "401 (Not Authorized)",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
+      }
+    },
     "/appointments/addAppointment": {
       "post": {
         "tags": ["appointments"],
@@ -1610,6 +1654,39 @@
             "available": 1
           }
         ]
+      }
+    },
+    "newConfirmedAppointment": {
+      "type": "object",
+      "properties": {
+        "slot_id": {
+          "type": "integer"
+        },
+        "user_id": {
+          "type": "integer"
+        },
+        "date": {
+          "type": "string"
+        }
+      },
+      "example": {
+        "slot_id": 1,
+        "user_id": 34,
+        "date": "1999-03-20"
+      }
+    },
+    "newConfirmedAppointmentResponse": {
+      "type": "object",
+      "example": {
+        "status": true,
+        "message": "success",
+        "data": {
+          "appointment_status": "upcoming",
+          "appointment_id": 7,
+          "slot_id": 1,
+          "user_id": 34,
+          "date": "1999-03-20"
+        }
       }
     },
     "newAppointment": {
