# routes/appointments.js
@@ -7,6 +7,7 @@ const appointmentsController = require("../controllers/appointments");
 
 
 router.post("/addAppointment",isAuth(["admin"]),validate(validationSchemas.addAppointment,"body"),appointmentsController.addAppointment);
+router.post("/addConfirmedAppointment",isAuth(["admin"]),validate(validationSchemas.addConfirmedAppointment,"body"),appointmentsController.addConfirmedAppointment);
 router.post("/getUserApps",isAuth(["admin"]),validate(validationSchemas.getUserApps,"body"),appointmentsController.getUserApps);
 router.post("/getDocApps",isAuth(["admin"]),validate(validationSchemas.getDocApps,"body"),appointmentsController.getDocApps);
 router.patch("/cancelAppointment",isAuth(["admin"]),validate(validationSchemas.cancelApp,"body"),appointmentsController.cancelAppointment);
